# GluonSock

./: CLAUDE.md  CMakeLists.txt  README.md
cli/: main.c
include/: netutils.h
include/gluonsock/: gluonsock.h  socks.h
socks/include/: debug.h  socks.h  utils.h
socks/src/: netutils.c  socks.c
test/: CMakeLists.txt
test/src/: test_socks.cpp
